fix layout on mobile

--- a/scss/layout/_reponsive.scss
+++ b/scss/layout/_reponsive.scss
@@ -3,7 +3,7 @@
     padding: 0;
   }
   .container{
-    padding: 0 12px;
+    // padding: 0 12px;
   }
   // control
   .control {
